--- a/src/css/ListView.css
+++ b/src/css/ListView.css
@@ -15,7 +15,7 @@
 }
 
 .list-view .list-cell:filled:hover {
-    -fx-background-color: transparent;
+    -fx-border-color: black;
     -fx-effect: null;
 }
 .list-cell
