--- a/src/fxml/GUI.fxml
+++ b/src/fxml/GUI.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,8 +15,7 @@
 
 <Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" onMouseDragged="#windowDragged" onMousePressed="#windowPressed" prefHeight="560.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
    <children>
-      <ProgressBar fx:id="receiveBar" layoutX="124.0" layoutY="526.0" prefHeight="17.0" prefWidth="206.0" progress="0.0" style="-fx-border-color: rgb(25,142,112);" />
-      <ProgressBar fx:id="sendBar" layoutX="124.0" layoutY="494.0" prefHeight="20.0" prefWidth="206.0" progress="0.0" style="-fx-border-color: rgb(25,142,112);" stylesheets="@../css/ProgressBar.css" />
+      <ProgressBar fx:id="sendBar" layoutX="123.0" layoutY="509.0" prefHeight="20.0" prefWidth="206.0" progress="0.0" style="-fx-border-color: rgb(25,142,112);" stylesheets="@../css/ProgressBar.css" />
       <Label alignment="TOP_CENTER" contentDisplay="TOP" layoutX="23.0" layoutY="37.0" prefHeight="33.0" prefWidth="407.0" text="Große Dateien versenden!" textAlignment="CENTER" textFill="#198e70" textOverrun="CLIP">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
@@ -49,7 +50,6 @@
                </graphic>
             </Label>
          </graphic></Button>
-      <ListView fx:id="uploadList" layoutX="42.0" layoutY="228.0" prefHeight="200.0" prefWidth="366.0" style="-fx-background-color: rgb(25,142,112);" />
       <Button fx:id="deleteButton" layoutX="42.0" layoutY="439.0" mnemonicParsing="false" onAction="#deleteDataButton" prefHeight="25.0" prefWidth="106.0" style="-fx-background-color: rgb(25,142,112);" textAlignment="CENTER">
          <font>
             <Font size="22.0" />
@@ -103,5 +103,15 @@
          </graphic></Button>
       <Button fx:id="minimizeButton" alignment="TOP_CENTER" layoutX="329.0" layoutY="12.0" mnemonicParsing="false" onAction="#minimizeWindow" prefHeight="25.0" prefWidth="37.0" stylesheets="@../css/XButton.css" text="▬" textAlignment="CENTER" />
       <Label fx:id="idLabel" layoutX="28.0" layoutY="16.0" text="Deine ID:" />
+      <TabPane layoutX="42.0" layoutY="228.0" prefHeight="200.0" prefWidth="366.0" stylesheets="@../css/TabPane.css" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Upload">
+               <content>
+                  <ListView fx:id="uploadList" prefHeight="200.0" prefWidth="366.0" style="-fx-background-color: rgb(25,142,112);" />
+               </content>
+            </Tab>
+          <Tab text="Download" />
+        </tabs>
+      </TabPane>
    </children>
 </Pane>
