--- a/src/fxml/GUI.fxml
+++ b/src/fxml/GUI.fxml
@@ -13,9 +13,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" onMouseDragged="#windowDragged" onMousePressed="#windowPressed" prefHeight="560.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
+<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" onMouseDragged="#windowDragged" onMousePressed="#windowPressed" prefHeight="600.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
    <children>
-      <ProgressBar fx:id="sendBar" layoutX="123.0" layoutY="509.0" prefHeight="20.0" prefWidth="206.0" progress="0.0" style="-fx-border-color: rgb(25,142,112);" stylesheets="@../css/ProgressBar.css" />
+      <ProgressBar fx:id="sendBar" layoutX="122.0" layoutY="501.0" prefHeight="20.0" prefWidth="206.0" progress="0.0" style="-fx-border-color: rgb(25,142,112);" stylesheets="@../css/ProgressBar.css" />
       <Label alignment="TOP_CENTER" contentDisplay="TOP" layoutX="23.0" layoutY="37.0" prefHeight="33.0" prefWidth="407.0" text="Große Dateien versenden!" textAlignment="CENTER" textFill="#198e70" textOverrun="CLIP">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
@@ -116,5 +116,8 @@
                </content></Tab>
         </tabs>
       </TabPane>
+      <Label layoutX="71.0" layoutY="503.0" prefHeight="17.0" prefWidth="48.0" text="Upload" />
+      <ProgressBar fx:id="sendBar2" layoutX="122.0" layoutY="543.0" prefHeight="20.0" prefWidth="206.0" progress="0.0" style="-fx-border-color: rgb(25,142,112);" stylesheets="@../css/ProgressBar.css" />
+      <Label layoutX="63.0" layoutY="545.0" prefHeight="17.0" prefWidth="56.0" text="Download" />
    </children>
 </Pane>
